Bug 378833 - Wrong web site link in About
Summary: Wrong web site link in About
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3.1
Platform: Debian stable Linux
: NOR minor
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 383088 383436 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-04-16 09:19 UTC by Anton Yablokov
Modified: 2017-08-13 11:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Yablokov 2017-04-16 09:19:05 UTC
Overview:
http://www.ktorrent.org/ site is not of KDE anymore, although it's still in KTorrent About and in the Abouts of all its plugins.

Steps to Reproduce:
1a) Launch KTorrent and hit Help → About KTorrent menu item.
1b) Launch KTorrent, open Plugins tab and hit Info button of a plugin.
2)  Hit http://www.ktorrent.org/ link.

Actual Result:
• You can choose and buy a fence.

Expected Results:
• You visit something like https://www.kde.org/applications/internet/ktorrent/

Additional Information:
• I suspect that the bug happens on all OSes but I can't check it right now.
Comment 1 Burkhard Lück 2017-04-17 16:35:18 UTC
Git commit 0ce4f5cdb642b89d4557ac3b612fc5921b334397 by Burkhard Lück.
Committed on 17/04/2017 at 16:33.
Pushed by lueck into branch 'master'.

Fix link to obsolete website

replace ktorrent.org with kde.org/applications/internet/ktorrent/

Differential Revision: https://phabricator.kde.org/D5480

M  +2    -2    ktorrent/main.cpp
M  +1    -1    ktupnptest/main.cpp
M  +1    -1    plasma/applet/plasma-applet-ktorrent.desktop
M  +1    -1    plugins/bwscheduler/ktorrent_bwscheduler.desktop
M  +1    -1    plugins/downloadorder/ktorrent_downloadorder.desktop
M  +1    -1    plugins/infowidget/ktorrent_infowidget.desktop
M  +1    -1    plugins/ipfilter/ktorrent_ipfilter.desktop
M  +1    -1    plugins/logviewer/ktorrent_logviewer.desktop
M  +1    -1    plugins/magnetgenerator/ktorrent_magnetgenerator.desktop
M  +1    -1    plugins/mediaplayer/ktorrent_mediaplayer.desktop
M  +1    -1    plugins/scanfolder/ktorrent_scanfolder.desktop
M  +1    -1    plugins/scripting/ktorrent_scripting.desktop
M  +1    -1    plugins/scripting/scripts/auto_remove/auto_remove.desktop
M  +1    -1    plugins/scripting/scripts/auto_resume/auto_resume.desktop
M  +1    -1    plugins/scripting/scripts/email_notifications/email_notifications.desktop
M  +1    -1    plugins/scripting/scripts/tracker_groups/tracker_groups.desktop
M  +1    -1    plugins/search/ktorrent_search.desktop
M  +1    -1    plugins/shutdown/ktorrent_shutdown.desktop
M  +1    -1    plugins/stats/ktorrent_stats.desktop
M  +1    -1    plugins/syndication/ktorrent_syndication.desktop
M  +1    -1    plugins/upnp/ktorrent_upnp.desktop
M  +1    -1    plugins/webinterface/ktwebinterfaceplugin.desktop
M  +1    -1    plugins/zeroconf/ktorrent_zeroconf.desktop

https://commits.kde.org/ktorrent/0ce4f5cdb642b89d4557ac3b612fc5921b334397
Comment 2 Christoph Feck 2017-08-03 21:42:42 UTC
*** Bug 383088 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2017-08-13 11:36:32 UTC
*** Bug 383436 has been marked as a duplicate of this bug. ***