Fix link to obsolete website

replace ktorrent.org with kde.org/applications/internet/ktorrent/
BUG:378833

Differential Revision: https://phabricator.kde.org/D5480